# IconCleaner

./: CMakeLists.txt  comboModel.cpp  comboModel.h  dirListModel.cpp  dirListModel.h  icondir.cpp  icondir.h  main.cpp  main.qml
